--- a/src/client/pages/Admin/Group/Member/Members.scss
+++ b/src/client/pages/Admin/Group/Member/Members.scss
@@ -88,21 +88,20 @@
         .in-right {
             padding: 10px 20px;
             justify-content: flex-end;
+            @include media-breakpoint-down(md, $grid-breakpoints) {
+                padding: 10px 0;
+            }
         }
         .in-left {
             padding: 10px 20px;
-            .avatar-image {
-                height: 42px;
-                width: 42px;
-                margin-right: 20px;
+            @include media-breakpoint-down(md, $grid-breakpoints) {
+                padding: 10px 0;
             }
             .ui-avatar {
-                height: 42px !important;
-                width: 42px !important;
-                font-size: 18px;
-                padding-top: 8px;
-                margin-right: 20px;
-                display: inline-block;
+                margin-right: 10px;
+                @include media-breakpoint-down(md, $grid-breakpoints) {
+                    margin: 0 5px;
+                }
             }
             .details {
                 display: inline-block;
@@ -181,6 +180,9 @@
             font-size: 18px;
             padding: 4px 8px;
             animation: fadeIn 0.42s;
+            @include media-breakpoint-down(md, $grid-breakpoints) {
+                padding: 2px;
+            }
         }
         .invitebtn {
             cursor: pointer;
@@ -223,6 +225,11 @@
         width: 35vw;
         @include media-breakpoint-down(sm, $grid-breakpoints) {
             width: auto;
+        }
+        @include media-breakpoint-down(md, $grid-breakpoints) {
+            .modal-body {
+                padding: 1rem;
+            }
         }
     }
     .subscribe-box {
