--- a/src/client/pages/Admin/Group/Post/PostPage.scss
+++ b/src/client/pages/Admin/Group/Post/PostPage.scss
@@ -143,12 +143,6 @@ $background_color_22: $color_deepPurple500;
             margin-bottom: 5px;
             display: flex;
             align-items: center;
-            .avatar {
-                width: 30px;
-                height: 30px;
-                border-radius: 50%;
-                background-color: $background_color_6;
-            }
             .info {
                 margin-left: 5px;
                 font-size: 12px;
@@ -254,12 +248,6 @@ $background_color_22: $color_deepPurple500;
                     display: flex;
                     padding: 10px;
                     border-top: 1px solid #e9e9e9;
-                    .avatar {
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 50%;
-                        flex: 0 0 auto;
-                    }
                     .content {
                         flex: 1;
                         .text {
@@ -313,14 +301,14 @@ $background_color_22: $color_deepPurple500;
     }
     .ui-post-editor {
         position: fixed;
-        right: 455px;
+        right: 450px;
         bottom: 55px;
         @include media-breakpoint-down(md, $grid-breakpoints) {
-            right: 40px;
+            right: 10px;
         }
     }
     .editor-area {
-        width: 700px;
+        width: 650px;
         background-color: $background_color_1;
         display: none;
         border-radius: 3px;
@@ -348,7 +336,7 @@ $background_color_22: $color_deepPurple500;
                         margin: 0 5px;
                     }
                     @include media-breakpoint-down(md, $grid-breakpoints) {
-                        margin: 0 3px;
+                        margin: 0;
                     }
                 }
                 .mde-dropdown-header-item {
@@ -403,13 +391,14 @@ $background_color_22: $color_deepPurple500;
         }
     }
     .add-post-btn {
+        cursor: pointer;
         margin-top: 10px;
         float: right;
         background-color: $dark;
         color: $color_2;
         border: none;
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
         border-radius: 50%;
         line-height: 1;
         font-size: 20px;
